# mouse-jiggler

./: LICENSE  main.py  pyproject.toml
src/: main.py
