[project]
name = "mouse-jiggler"
version = "0.1.0"
description = "As the name suggests, this project jiggles your mouse using code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.19.0",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
]
